--- a/templates/create-hybrid-auto-scaling-group.template
+++ b/templates/create-hybrid-auto-scaling-group.template
@@ -147,7 +147,7 @@
             "MinValue": 60,
             "MaxValue": 3600,
             "ConstraintDescription": "must be a valid number between 60 and 3600.",
-            "Description": "The amount of time (in seconds) that can elapse before the FortiGate Autoscale lifecycle hook times out. Minimum is 60. Maximum is 3600."
+            "Description": "The amount of time (in seconds) that can elapse before the FortiGate Auto Scaling lifecycle hook times out. Minimum is 60. Maximum is 3600."
         },
         "ProductAMIByol": {
             "Type": "String",
@@ -1126,13 +1126,13 @@
     },
     "Outputs": {
         "AutoScalingGroupNamePayg": {
-            "Description": "FortiGate Autoscale Auto Scaling Group (PAYG) Name",
+            "Description": "FortiGate Auto Scaling Auto Scaling Group (PAYG) Name",
             "Value": {
                 "Ref": "FgtAutoScalingGroupPayg"
             }
         },
         "AutoScalingGroupNameByol": {
-            "Description": "FortiGate Autoscale Auto Scaling Group (BYOL) Name",
+            "Description": "FortiGate Auto Scaling Auto Scaling Group (BYOL) Name",
             "Value": {
                 "Ref": "FgtAutoScalingGroupByol"
             }
