--- a/templates/autoscale-main.template
+++ b/templates/autoscale-main.template
@@ -1,6 +1,6 @@
 {
     "AWSTemplateFormatVersion": "2010-09-09",
-    "Description": "This template does the majority of the work for deploying FortiGate Autoscale. It is not for direct use.",
+    "Description": "This template does the majority of the work for deploying FortiGate Auto Scaling. It is not for direct use.",
     "Parameters": {
         "ResourceTagPrefix": {
             "Type": "String",
@@ -44,15 +44,15 @@
             "Type": "String",
             "AllowedPattern": "^(([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5])\\.){3}([0-9]|[1-9][0-9]|1[0-9][0-9]|2[0-4][0-9]|25[0-5]){1}(\\/([0-9]|[1-2][0-9]|3[0-2]))?$",
             "ConstraintDescription": "must be a valid CIDR block format.",
-            "Description": "The CIDR block of the selected existing VPC in which FortiGate Autoscale will be deployed. This can be found in parentheses in the VPC ID parameter selection."
+            "Description": "The CIDR block of the selected existing VPC in which FortiGate Auto Scaling will be deployed. This can be found in parentheses in the VPC ID parameter selection."
         },
         "PublicSubnet1": {
             "Type": "AWS::EC2::Subnet::Id",
-            "Description": "The ID of the public subnet 1 located in Availability Zone 1 of the selected existing VPC. The FortiGate Autoscale instances will be deployed here."
+            "Description": "The ID of the public subnet 1 located in Availability Zone 1 of the selected existing VPC. The FortiGate Auto Scaling instances will be deployed here."
         },
         "PublicSubnet2": {
             "Type": "AWS::EC2::Subnet::Id",
-            "Description": "The ID of the public subnet 2 located in Availability Zone 2 of the selected existing VPC. The FortiGate Autoscale instances will be deployed here."
+            "Description": "The ID of the public subnet 2 located in Availability Zone 2 of the selected existing VPC. The FortiGate Auto Scaling instances will be deployed here."
         },
         "PrivateSubnet1": {
             "Type": "AWS::EC2::Subnet::Id",
@@ -72,7 +72,7 @@
         },
         "FortiOSVersion": {
             "Type": "String",
-            "Description": "The FortiOS version supported by FortiGate Autoscale."
+            "Description": "The FortiOS version supported by FortiGate Auto Scaling."
         },
         "LifecycleHookTimeout": {
             "Type": "Number",
@@ -266,7 +266,7 @@
         "FortiAnalyzerIntegrationOptions": {
             "Type": "String",
             "AllowedValues": ["yes", "no"],
-            "Description": "Choose 'yes' to incorporate FortiAnalyzer into FortiGate Autoscale to use extended features that include storing logs into FortiAnalyzer."
+            "Description": "Choose 'yes' to incorporate FortiAnalyzer into FortiGate Auto Scaling to use extended features that include storing logs into FortiAnalyzer."
         },
         "FortiAnalyzerInstanceType": {
             "Type": "String",
@@ -274,13 +274,13 @@
         },
         "FortiAnalyzerVersion": {
             "Type": "String",
-            "Description": "The FortiAnalyzer version supported by FortiGate Autoscale."
+            "Description": "The FortiAnalyzer version supported by FortiGate Auto Scaling."
         },
         "FortiAnalyzerAutoscaleAdminUsername": {
             "Type": "String",
             "AllowedPattern": "^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$",
             "ConstraintDescription": "This FortiAnalyzer account name can include numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen (-).",
-            "Description": "The name of the secondary administrator level account in the FortiAnalyzer, which FortiGate Autoscale uses to connect to the FortiAnalyzer to authorize any FortiGate device in the Auto Scaling group. To conform to the FortiAnalyzer naming policy, the username can only contain numbers, lowercase letters, uppercase letters, and hyphens. It cannot start or end with a hyphen (-)."
+            "Description": "The name of the secondary administrator level account in the FortiAnalyzer, which FortiGate Auto Scaling uses to connect to the FortiAnalyzer to authorize any FortiGate device in the Auto Scaling group. To conform to the FortiAnalyzer naming policy, the username can only contain numbers, lowercase letters, uppercase letters, and hyphens. It cannot start or end with a hyphen (-)."
         },
         "FortiAnalyzerAutoscaleAdminPassword": {
             "Type": "String",
