--- a/templates/workload.yaml
+++ b/templates/workload.yaml
@@ -6,6 +6,10 @@ Description: >-
   be billed for the FortiGate On-Demand instances and related AWS resources if you
   create a stack from this template. (qs-1p3pr46rg)
 Metadata:
+  AWSAMIRegionMap:
+    Filters:
+      FGTVM64PAYG603:
+        product-code: 2wqkpek696qhdeo7lbbjncqli
   AWS::CloudFormation::Interface:
     ParameterGroups:
       - Label:
@@ -329,37 +333,37 @@ Mappings:
     AMI:
       FGTVM64PAYG603: FortiGate-VM64-AWSONDEMAND build0268 (6.0.5) GA-3124a694-441c-4ff1-8bf7-4d153be424a6-ami-0072f781cee3b2a26.4
     ap-northeast-1:
-      FGTVM64PAYG603: ami-0b7ea934fc0a83064
+      FGTVM64PAYG603: ami-0a22995f7caee5334
     ap-northeast-2:
-      FGTVM64PAYG603: ami-0c9c34c5ac1adc829
+      FGTVM64PAYG603: ami-035be57bc51756b25
     ap-southeast-1:
-      FGTVM64PAYG603: ami-01b05e38c6388f84f
+      FGTVM64PAYG603: ami-0bf83888fb5d993bb
     ap-southeast-2:
-      FGTVM64PAYG603: ami-029bca18bc8f272cd
+      FGTVM64PAYG603: ami-091de784c26944cb1
     ap-south-1:
-      FGTVM64PAYG603: ami-08509cefe5c6372a8
+      FGTVM64PAYG603: ami-0ffb0d6e20fee4b99
     sa-east-1:
-      FGTVM64PAYG603: ami-0851b028d263ced22
+      FGTVM64PAYG603: ami-06ee5a5f1d6c76d94
     eu-west-1:
-      FGTVM64PAYG603: ami-0c1f71f51fb106a31
+      FGTVM64PAYG603: ami-06b7a8249560562b8
     eu-west-2:
-      FGTVM64PAYG603: ami-0d333d8821f37aa36
+      FGTVM64PAYG603: ami-0f3a89b9b30652fcb
     eu-west-3:
-      FGTVM64PAYG603: ami-0a97f4194a0515b21
+      FGTVM64PAYG603: ami-04ce590dbf2d54f31
     eu-central-1:
-      FGTVM64PAYG603: ami-0a4498f9a72cf2537
+      FGTVM64PAYG603: ami-0b67a4aaa7832805a
     ca-central-1:
-      FGTVM64PAYG603: ami-0b1d312dc1c41030e
+      FGTVM64PAYG603: ami-0cf150ce56dbb3868
     us-east-1:
-      FGTVM64PAYG603: ami-0532fcbf3ada1987a
+      FGTVM64PAYG603: ami-0ca8b3e14d2bb45c6
     us-east-2:
-      FGTVM64PAYG603: ami-07c2582e55a222dd3
+      FGTVM64PAYG603: ami-0d5da5f2ef4130386
     us-west-1:
-      FGTVM64PAYG603: ami-0aa77e91cb3eab854
+      FGTVM64PAYG603: ami-00b5736be5f8e72c0
     us-west-2:
-      FGTVM64PAYG603: ami-00a5f7f2848b21194
+      FGTVM64PAYG603: ami-073c48055f708e0dc
     us-gov-west-1:
-      FGTVM64PAYG603: ami-bbdba7da
+      FGTVM64PAYG603: ami-c4d9efa5
   ProtocolPortMap:
     HTTP:
       defaultport: '80'
@@ -384,7 +388,7 @@ Resources:
                 - !Ref 'AWS::StackId'
       TemplateURL:
         !Sub
-          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/create-db-table.yaml'
+          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/create-db-table.template.yaml'
           - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
             S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       TimeoutInMinutes: 10
@@ -397,7 +401,7 @@ Resources:
         QSS3BucketRegion: !Ref 'QSS3BucketRegion'
       TemplateURL:
         !Sub
-          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/copy-lambda.yaml'
+          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/copy-lambda.template.yaml'
           - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
             S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       TimeoutInMinutes: 10
@@ -423,7 +427,7 @@ Resources:
         LambdaFunctionArn: !GetAtt 'LambdaFunctionFgtAsg.Arn'
       TemplateURL:
         !Sub
-          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/create-api-gateway.yaml'
+          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/create-api-gateway.template.yaml'
           - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
             S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       TimeoutInMinutes: 10
@@ -507,7 +511,7 @@ Resources:
         FortiGateAdminPort: !Ref 'FortiGateAdminPort'
       TemplateURL:
         !Sub
-          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/create-nat-fgt-master.yaml'
+          - 'https://${S3Bucket}.s3.${S3Region}.${AWS::URLSuffix}/${QSS3KeyPrefix}templates/create-nat-fgt-master.template.yaml'
           - S3Region: !If [UsingDefaultBucket, !Ref 'AWS::Region', !Ref QSS3BucketRegion]
             S3Bucket: !If [UsingDefaultBucket, !Sub '${QSS3BucketName}-${AWS::Region}', !Ref QSS3BucketName]
       TimeoutInMinutes: 10
