--- a/templates/autoscale-main.template
+++ b/templates/autoscale-main.template
@@ -180,13 +180,13 @@
             "ConstraintDescription": "must specify an admin access key pair for FortiGate instances.",
             "Description": "The Amazon EC2 Key Pair for admin access."
         },
-        "MasterElectionTimeout": {
+        "PrimaryElectionTimeout": {
             "Type": "Number",
             "Default": 300,
             "MinValue": 90,
             "MaxValue": 3600,
             "ConstraintDescription": "must be a valid number between 90 and 3600.",
-            "Description": "The maximum time (in seconds) to wait for a master election to complete. Minimum is 30. Maximum is 3600."
+            "Description": "The maximum time (in seconds) to wait for the primary election to complete. Minimum is 30. Maximum is 3600."
         },
         "HeartBeatInterval": {
             "Type": "Number",
@@ -298,7 +298,7 @@
         "IntegratedNATGatewayOptions": {
             "Type": "String",
             "AllowedValues": ["yes", "no"],
-            "Description": "Choose 'yes' to set the master FortiGate in the Auto Scaling group as the NAT gateway for egress traffic from the protected private subnets."
+            "Description": "Choose 'yes' to set the primary FortiGate in the Auto Scaling group as the NAT gateway for egress traffic from the protected private subnets."
         }
     },
     "Conditions": {
@@ -1201,10 +1201,10 @@
                 "LifecycleHookTimeout": {
                     "Ref": "LifecycleHookTimeout"
                 },
-                "MasterElectionTimeout": {
-                    "Ref": "MasterElectionTimeout"
+                "PrimaryElectionTimeout": {
+                    "Ref": "PrimaryElectionTimeout"
                 },
-                "MasterElectionNoWait": "true",
+                "PrimaryElectionNoWait": "true",
                 "HeartBeatInterval": {
                     "Ref": "HeartBeatInterval"
                 },
@@ -1220,7 +1220,7 @@
                         "Outputs.FgtAsgHandlerApiGatewayUrl"
                     ]
                 },
-                "MasterScalingGroupName": {
+                "PrimaryScalingGroupName": {
                     "Fn::If": [
                         "IfPAYGOnly",
                         {
@@ -1609,7 +1609,7 @@
                         "FgtAsgMaxSizePayg",
                         "FgtAsgScaleOutThreshold",
                         "FgtAsgScaleInThreshold",
-                        "MasterElectionTimeout",
+                        "PrimaryElectionTimeout",
                         "GetLicenseGracePeriod",
                         "FgtAsgHealthCheckGracePeriod",
                         "FgtAsgCooldown",
@@ -1743,8 +1743,8 @@
                 "FortiGatePskSecret": {
                     "default": "FortiGate PSK secret"
                 },
-                "MasterElectionTimeout": {
-                    "default": "Master election timeout"
+                "PrimaryElectionTimeout": {
+                    "default": "Primary election timeout"
                 },
                 "HeartBeatInterval": {
                     "default": "Heart beat interval"
