--- a/templates/autoscale-new-vpc.template
+++ b/templates/autoscale-new-vpc.template
@@ -208,13 +208,13 @@
             "ConstraintDescription": "must specify an admin access key pair for FortiGate instances.",
             "Description": "The Amazon EC2 Key Pair for admin access."
         },
-        "MasterElectionTimeout": {
+        "PrimaryElectionTimeout": {
             "Type": "Number",
             "Default": 300,
             "MinValue": 90,
             "MaxValue": 3600,
             "ConstraintDescription": "must be a valid number between 90 and 3600.",
-            "Description": "The maximum time (in seconds) to wait for a master election to complete. Minimum is 30. Maximum is 3600."
+            "Description": "The maximum time (in seconds) to wait for the primary election to complete. Minimum is 30. Maximum is 3600."
         },
         "HeartBeatInterval": {
             "Type": "Number",
@@ -349,7 +349,7 @@
             "Type": "String",
             "Default": "yes",
             "AllowedValues": ["yes", "no"],
-            "Description": "Choose 'yes' to set the master FortiGate in the Auto Scaling group as the NAT gateway for egress traffic from the protected private subnets."
+            "Description": "Choose 'yes' to set the primary FortiGate in the Auto Scaling group as the NAT gateway for egress traffic from the protected private subnets."
         }
     },
     "Conditions": {
@@ -681,8 +681,8 @@
                     "KeyPairName": {
                         "Ref": "KeyPairName"
                     },
-                    "MasterElectionTimeout": {
-                        "Ref": "MasterElectionTimeout"
+                    "PrimaryElectionTimeout": {
+                        "Ref": "PrimaryElectionTimeout"
                     },
                     "HeartBeatInterval": {
                         "Ref": "HeartBeatInterval"
@@ -837,7 +837,7 @@
                         "FgtAsgMaxSizePayg",
                         "FgtAsgScaleOutThreshold",
                         "FgtAsgScaleInThreshold",
-                        "MasterElectionTimeout",
+                        "PrimaryElectionTimeout",
                         "GetLicenseGracePeriod",
                         "FgtAsgHealthCheckGracePeriod",
                         "FgtAsgCooldown",
@@ -999,8 +999,8 @@
                 "GetLicenseGracePeriod": {
                     "default": "Get license grace period"
                 },
-                "MasterElectionTimeout": {
-                    "default": "Master election timeout"
+                "PrimaryElectionTimeout": {
+                    "default": "Primary election timeout"
                 },
                 "FortiAnalyzerIntegrationOptions": {
                     "default": "FortiAnalyzer integration"
