--- a/ci/taskcat.yml
+++ b/ci/taskcat.yml
@@ -42,8 +42,8 @@ tests:
       FortiAnalyzerAutoscaleAdminUsername: taskcat
       FortiAnalyzerCustomPrivateIPAddress: 192.168.1.201
       FortiAnalyzerIntegrationOptions: 'yes'
-      FortiAnalyzerInstanceType: c4.large
-      FortiAnalyzerVersion: 6.2.3
+      FortiAnalyzerInstanceType: m5.large
+      FortiAnalyzerVersion: 6.2.5
       FortiGateAdminCIDR: 0.0.0.0/0
       FortiGateAdminPort: 8443
       FortiGateInstanceType: c5.large
@@ -105,8 +105,8 @@ tests:
       FortiAnalyzerAutoscaleAdminUsername: taskcat
       FortiAnalyzerCustomPrivateIPAddress: 192.168.1.201
       FortiAnalyzerIntegrationOptions: 'yes'
-      FortiAnalyzerInstanceType: d2.4xlarge
-      FortiAnalyzerVersion: 6.2.3
+      FortiAnalyzerInstanceType: m5.large
+      FortiAnalyzerVersion: 6.2.5
       FortiGateAdminCIDR: 0.0.0.0/0
       FortiGateAdminPort: 8443
       FortiGateInstanceType: c5.large
@@ -156,8 +156,8 @@ tests:
       FortiAnalyzerAutoscaleAdminUsername: taskcat
       FortiAnalyzerCustomPrivateIPAddress: 192.168.1.201
       FortiAnalyzerIntegrationOptions: 'yes'
-      FortiAnalyzerInstanceType: d2.4xlarge
-      FortiAnalyzerVersion: 6.2.3
+      FortiAnalyzerInstanceType: m5.large
+      FortiAnalyzerVersion: 6.2.5
       FortiGateAdminCIDR: 0.0.0.0/0
       FortiGateAdminPort: 8443
       FortiGateInstanceType: c5.large
@@ -207,8 +207,8 @@ tests:
       FortiAnalyzerAutoscaleAdminUsername: taskcat
       FortiAnalyzerCustomPrivateIPAddress: 192.168.1.201
       FortiAnalyzerIntegrationOptions: 'yes'
-      FortiAnalyzerInstanceType: d2.4xlarge
-      FortiAnalyzerVersion: 6.2.3
+      FortiAnalyzerInstanceType: m5.large
+      FortiAnalyzerVersion: 6.2.5
       FortiGateAdminCIDR: 0.0.0.0/0
       FortiGateAdminPort: 8443
       FortiGateInstanceType: c5.large
@@ -258,8 +258,8 @@ tests:
       FortiAnalyzerAutoscaleAdminUsername: taskcat
       FortiAnalyzerCustomPrivateIPAddress: 192.168.1.201
       FortiAnalyzerIntegrationOptions: 'yes'
-      FortiAnalyzerInstanceType: d2.4xlarge
-      FortiAnalyzerVersion: 6.2.3
+      FortiAnalyzerInstanceType: m5.large
+      FortiAnalyzerVersion: 6.2.5
       FortiGateAdminCIDR: 0.0.0.0/0
       FortiGateAdminPort: 8443
       FortiGateInstanceType: c5.large
@@ -309,8 +309,8 @@ tests:
       FortiAnalyzerAutoscaleAdminUsername: taskcat
       FortiAnalyzerCustomPrivateIPAddress: 192.168.1.201
       FortiAnalyzerIntegrationOptions: 'yes'
-      FortiAnalyzerInstanceType: c4.large
-      FortiAnalyzerVersion: 6.2.3
+      FortiAnalyzerInstanceType: m5.large
+      FortiAnalyzerVersion: 6.2.5
       FortiGateAdminCIDR: 0.0.0.0/0
       FortiGateAdminPort: 8443
       FortiGateInstanceType: c5.large
