--- a/templates/workload.template.yaml
+++ b/templates/workload.template.yaml
@@ -6,6 +6,10 @@ Description: >-
   be billed for the FortiGate On-Demand instances and related AWS resources if you
   create a stack from this template. (qs-1p3pr46rg)
 Metadata:
+  QuickStartDocumentation:
+    EntrypointName: "Launch into an existing VPC"
+    OptionalParameters:
+      - InternalLoadBalancerDnsName
   AWSAMIRegionMap:
     Filters:
       FGTVM64PAYG603:
