--- a/templates/autoscale-new-vpc.template.yaml
+++ b/templates/autoscale-new-vpc.template.yaml
@@ -5,7 +5,7 @@ Description: >-
   deploys Fortinet FortiGate Auto Scaling into it. For more details, please see
   the Fortinet FortiGate Auto Scaling documentation. **WARNING** You will be
   billed for the FortiGate instances and related AWS resources if you create a
-  stack from this template.
+  stack from this template. (qs-1p3pr46rl)
 Parameters:
   ResourceTagPrefix:
     Type: String
