correct template error level issues using taskcat

--- a/templates/add-nic-attachment-service.template.yaml
+++ b/templates/add-nic-attachment-service.template.yaml
@@ -82,7 +82,7 @@ Resources:
             - s3
           QSS3BucketName: !Ref QSS3BucketName
           QSS3KeyPrefix: !Ref QSS3KeyPrefix
-      TimeoutInMinutes: '5'
+      TimeoutInMinutes: 5
   NicAttachmentCfnServiceProvider:
     Properties:
       ServiceToken: !GetAtt
