--- a/templates/autoscale-new-vpc.template.yaml
+++ b/templates/autoscale-new-vpc.template.yaml
@@ -524,7 +524,7 @@ Resources:
             - s3
           QSS3BucketName: !Ref QSS3BucketName
           QSS3KeyPrefix: !Ref QSS3KeyPrefix
-      TimeoutInMinutes: '5'
+      TimeoutInMinutes: 5
   StackMainWorkload:
     Type: 'AWS::CloudFormation::Stack'
     Properties:
