--- a/templates/create-fortianalyzer.template.yaml
+++ b/templates/create-fortianalyzer.template.yaml
@@ -229,7 +229,7 @@ Resources:
       ImageId: !Ref ProductAMI
       InstanceType: !Ref InstanceType
       NetworkInterfaces:
-        - DeviceIndex: 0
+        - DeviceIndex: '0'
           AssociatePublicIpAddress: !If
             - IfUseEIP
             - false
@@ -241,7 +241,7 @@ Resources:
           SubnetId: !Ref SubnetID
           GroupSet:
             - !Ref sgFortiAnalyzerInstance
-      Monitoring: 'true'
+      Monitoring: true
       Tags:
         - Key: Name
           Value: !If
@@ -327,7 +327,7 @@ Resources:
             - GovCloudCondition
             - s3-us-gov-west-1
             - s3
-      TimeoutInMinutes: '10'
+      TimeoutInMinutes: 10
   LambdaFunctionFazHandler:
     Properties:
       FunctionName: !Join
