--- a/templates/create-new-vpc.template.yaml
+++ b/templates/create-new-vpc.template.yaml
@@ -85,8 +85,8 @@ Resources:
     Properties:
       CidrBlock: !Ref VPCCIDR
       InstanceTenancy: default
-      EnableDnsSupport: 'true'
-      EnableDnsHostnames: 'true'
+      EnableDnsSupport: true
+      EnableDnsHostnames: true
       Tags:
         - Key: Name
           Value: !Join
@@ -154,10 +154,10 @@ Resources:
     Type: 'AWS::EC2::NetworkAclEntry'
     Properties:
       CidrBlock: 0.0.0.0/0
-      Egress: 'true'
-      Protocol: '-1'
+      Egress: true
+      Protocol: -1
       RuleAction: allow
-      RuleNumber: '100'
+      RuleNumber: 100
       NetworkAclId: !Ref FgtPublicSubnetAcl
     DependsOn:
       - FgtPublicSubnetAcl
@@ -165,9 +165,9 @@ Resources:
     Type: 'AWS::EC2::NetworkAclEntry'
     Properties:
       CidrBlock: 0.0.0.0/0
-      Protocol: '-1'
+      Protocol: -1
       RuleAction: allow
-      RuleNumber: '100'
+      RuleNumber: 100
       NetworkAclId: !Ref FgtPublicSubnetAcl
     DependsOn:
       - FgtPublicSubnetAcl
